Fix the overflow of the hint

--- a/style.css
+++ b/style.css
@@ -126,9 +126,15 @@ body {
   grid-row: 4 / span 1;
   text-align: center;
   font-size: 3rem;
-  margin: -10rem 10rem 0rem;
+  /* margin: -10rem 10rem 0rem; */
   text-align: justify;
+  width: 75%;
+  height: 50%;
   overflow: scroll;
+  background: white;
+  padding: 1rem;
+  margin: 0 auto;
+  border-radius: 1rem;
 }
 
 /* INPUT DECORATION */
